1) В BaseBean добавлен абстрактный метод getServiceRootFolder(), который должен возвращать NodeRef на "домашний" каталог сервиса. Метод реализован во всех классах, унаследованных от BaseBean. 2) Добавлен сервис управления правами доступа к сервисным папкам (ServiceFolderPermissionHelper). 3) Описание бизнес-роли "Технолог календарей" вынесено из оргструктуры в сервис "Рабочий календарь".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2047 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/repo/pom.xml
+++ b/lecm-base/repo/pom.xml
@@ -67,7 +67,11 @@
             <artifactId>dictionary-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!-- Don't add here amp dependencies as it will break amp packaging -->
+        <dependency>
+            <groupId>ru.it.lecm.security</groupId>
+            <artifactId>lecm-security-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
