Заготовки для AРM "Договорной деятельности"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2050 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -1,4 +1,14 @@
-page.contracts.title=Contracts
-page.contracts.filter.label=(content filtered)
+page.contracts-main=Contracts -> Main
+page.contracts-main.filter=(filtered)
+
+page.contracts=Contracts -> List
+page.contracts.filter=(filtered)
+
+page.contracts-documents=Contracts -> Documents
+page.contracts-documents.filter=(filtered)
+
+page.contracts-reports=Contracts -> Reports
+page.contracts-reports.filter=(content filtered)
+
 header.contracts.label=Contracts
 header.contracts.description=Contracts
