--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get.properties
@@ -1,2 +1,4 @@
-lecm.contracts.contracts.btn=Contracts
-lecm.contracts.documents.btn=Documents
+lecm.contracts.main.btn=Main
+lecm.contracts.list.btn=Contracts
+lecm.contracts.documents.btn=Contracts Documents
+lecm.contracts.reports.btn=Reports
