[~]Подправлена модель [~]Подправлены переводы [~]Добавлен стандартный контрол для выбора значений из справочников для выбора Регистраторов и Контрагентов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2052 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -14,8 +14,6 @@ lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=Date of
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=Date of contract
 lecm-contract_model.property.lecm-contract_summaryContent.title=Summary of the treaty
 lecm-contract_model.property.lecm-contract_summaryContent.description=Summary of the treaty
-lecm-contract_model.property.lecm-contract_partner.title=Contractor
-lecm-contract_model.property.lecm-contract_partner.description=Contractor
 lecm-contract_model.property.lecm-contract_currency.title=Currency of contract
 lecm-contract_model.property.lecm-contract_currency.description=Currency of contract
 lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
@@ -26,9 +24,11 @@ lecm-contract_model.property.lecm-contract_endDate.title=End date
 lecm-contract_model.property.lecm-contract_endDate.description=End date of the contract
 lecm-contract_model.property.lecm-contract_unlimited.title=Unlimited
 lecm-contract_model.property.lecm-contract_unlimited.description=Unlimited
-lecm-contract_model.property.lecm-contract_registrator.title=Registrator
-lecm-contract_model.property.lecm-contract_registrator.description=Registrator of document
 lecm-contract_model.property.lecm-contract_locationRegistration.title=Location of registration
 lecm-contract_model.property.lecm-contract_locationRegistration.description=Location of registration
 lecm-contract_model.property.lecm-contract_locationContract.title=Location of contract
 lecm-contract_model.property.lecm-contract_locationContract.description=Location of contract
+lecm-contract_model.association.lecm-contract_partner-assoc.title=Contractor
+lecm-contract_model.association.lecm-contract_partner-assoc.description=Contractor
+lecm-contract_model.association.lecm-contract_registrator-assoc.title=Registrator
+lecm-contract_model.association.lecm-contract_registrator-assoc.description=Registrator of document
