[~]Добавлен стандартный контрол для выбора значений из справочников для выбора Вида договора, Тематики договора, Причины удаления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2053 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -14,8 +14,6 @@ lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=Date of
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=Date of contract
 lecm-contract_model.property.lecm-contract_summaryContent.title=Summary of the treaty
 lecm-contract_model.property.lecm-contract_summaryContent.description=Summary of the treaty
-lecm-contract_model.property.lecm-contract_currency.title=Currency of contract
-lecm-contract_model.property.lecm-contract_currency.description=Currency of contract
 lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
 lecm-contract_model.property.lecm-contract_totalSum.description=The total amount of the contract
 lecm-contract_model.property.lecm-contract_startDate.title=Start date
@@ -32,3 +30,11 @@ lecm-contract_model.association.lecm-contract_partner-assoc.title=Contractor
 lecm-contract_model.association.lecm-contract_partner-assoc.description=Contractor
 lecm-contract_model.association.lecm-contract_registrator-assoc.title=Registrator
 lecm-contract_model.association.lecm-contract_registrator-assoc.description=Registrator of document
+lecm-contract_model.association.lecm-contract_currency-assoc.title=Currency of contract
+lecm-contract_model.association.lecm-contract_currency-assoc.description=Currency of contract
+lecm-contract_model.association.lecm-contract_typeContract-assoc.title=Type contract
+lecm-contract_model.association.lecm-contract_typeContract-assoc.description=Type contract
+lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=Subject of the contract
+lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=Subject of the contract
+lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=The reason for deletion
+lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=The reason for deletion
