[+]В модель карточки договора добавлены: "Валюта договора", "Подписано контрагентом","Подписант со стороны контрагента"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2059 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -14,6 +14,10 @@ lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=Date of
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=Date of contract
 lecm-contract_model.property.lecm-contract_summaryContent.title=Summary of the treaty
 lecm-contract_model.property.lecm-contract_summaryContent.description=Summary of the treaty
+lecm-contract_model.property.lecm-contract_signedCounterparty.title=Signed counterparty
+lecm-contract_model.property.lecm-contract_signedCounterparty.description=Signed counterparty
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=Signatory of the counterparty
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=Signatory of the counterparty
 lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
 lecm-contract_model.property.lecm-contract_totalSum.description=The total amount of the contract
 lecm-contract_model.property.lecm-contract_startDate.title=Start date
@@ -38,3 +42,5 @@ lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=Subjec
 lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=Subject of the contract
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=The reason for deletion
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=The reason for deletion
+lecm-contract_model.association.lecm-contract_representative-assoc.title=Representative
+lecm-contract_model.association.lecm-contract_representative-assoc.description=Representative
