ALF-706 Остановка процесса при смене статуса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2066 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -30,7 +30,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=Dynamic Roles
 lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=Permission
 
 lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=Duration
-
+lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=Stop Sub-Processes
 
 #Status Properties
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionUser.title=Status Transition
