[+]ALF-751  АРМ. Договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2068 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -12,3 +12,11 @@ page.contracts-reports.filter=(content filtered)
 
 header.contracts.label=Contracts
 header.contracts.description=Contracts
+
+
+contract.regProjectNumber=Registration Project Number
+contract.regNumber=Registration Contract Number
+contract.parther=Parther
+contract.type=Type
+contract.status=Status
+contract.conclusionDate=Date of contract
