--- a/lecm-business-journal/repo/pom.xml
+++ b/lecm-business-journal/repo/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>dictionary-repo-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.security</groupId>
+            <artifactId>lecm-security-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
