--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
@@ -1,1 +1,5 @@
 label.title=Summary
+label.info.totalSum=Total contracts:
+label.info.contractsToDevelop=Contracts to develop
+label.info.activeContracts=Active contracts
+label.info.inactiveContracts=Inactive contracts
