--- a/lecm-user-workflow/repo/pom.xml
+++ b/lecm-user-workflow/repo/pom.xml
@@ -41,6 +41,12 @@
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.documents</groupId>
+		    <artifactId>documents-repo-api</artifactId>
+		    <version>${project.version}</version>
+		    <scope>provided</scope>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
