--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -97,6 +97,12 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.dictionary</groupId>
+		    <artifactId>dictionary-repo-api</artifactId>
+		    <version>${project.version}</version>
+		    <scope>provided</scope>
+	    </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
