ALF-775: Создание черновика документа к договору: переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2111 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
@@ -1,1 +1,4 @@
 lecmContractWf_model.type.lecmContractWf_createOnBasis.title=Create Document On The Basis
+lecmContractWf_model.type.lecmContractWf_createOnBasis.description=Create Document On The Basis
+lecm-lecmContractWf_model.association.lecmContractWf_documentType.title=Document type
+lecm-lecmContractWf_model.association.lecmContractWf_documentType.description=Document type
