--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -20,3 +20,5 @@ contract.parther=Parther
 contract.type=Type
 contract.status=Status
 contract.conclusionDate=Date of contract
+
+contract.additionalDocumentType=Document type
