[+]Дашлет сводная информация. Добавлена информация о количестве: "Договоров в разработке", "Активных договоров", "Неактивных договоров"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2121 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
@@ -1,5 +1,5 @@
 label.title=Summary
-label.info.totalSum=Total contracts:
+label.info.allContracts=All contracts:
 label.info.contractsToDevelop=Contracts to develop
 label.info.activeContracts=Active contracts
 label.info.inactiveContracts=Inactive contracts
