[+] ALF-710. Вспомогательные процессы для удаления и отмены договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2132 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -22,3 +22,4 @@ contract.status=Status
 contract.conclusionDate=Date of contract
 
 contract.additionalDocumentType=Document type
+contract.deleteReason=Delete Reason
