--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow.properties
@@ -2,3 +2,7 @@ lecmContractWf_model.type.lecmContractWf_createOnBasis.title=Create Document On 
 lecmContractWf_model.type.lecmContractWf_createOnBasis.description=Create Document On The Basis
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.title=Document type
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.description=Document type
+lecmContractWf_model.type.lecmContractWf_createOnBasis.title=Create Document On The Basis
+lecmContractWf_model.type.lecmContractWf_deleteReasonTask.title=Delete Reason
+lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.title=Delete Reason
+lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.description=Delete Reason
