ALF-792 Всплывающая кнопка редактирования на дашлете "Основные сведения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2143 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/metadata/form/form.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/metadata/form/form.get.properties
@@ -1,2 +1,3 @@
 logicecm.base.show-arhive.label=Secondary
-dashlet.expand.tooltip=Edit details
+dashlet.expand.tooltip=Expand details
+dashlet.edit.tooltip=Edit
