ALF-789. Изменил название шапки при просмотре истории статусов в дашлете "Основные сведения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2145 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form.properties
@@ -39,3 +39,5 @@ page.lecm.documents-journal.description=Documents Journal
 
 header.delegation.label=Document Journal
 header.delegation.description=Document Journal
+
+form.logicecm.view=Viewing History
