Дашлет сводная информация. Добавлены участники договорной деятельности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2161 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
@@ -1,6 +1,6 @@
-label.title=Summary
+label.title=Summary:
 label.info.allContracts=All contracts:
-label.info.contractsToDevelop=Contracts to develop
-label.info.activeContracts=Active contracts
-label.info.inactiveContracts=Inactive contracts
-label.info.participants=Participants of the contract activity
+label.info.contractsToDevelop=Contracts to develop:
+label.info.activeContracts=Active contracts:
+label.info.inactiveContracts=Inactive contracts:
+label.info.participants=Participants of the contract activity:
