1) В модуль соласования добавлен метод для определения версии вложенного договора. 2) В Contracts Fake добавлена категория вложений "Договор" 3) SVN Ignore для share/
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2162 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/pom.xml
+++ b/lecm-approval/repo/pom.xml
@@ -51,11 +51,16 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.documents</groupId>
+			<artifactId>documents-repo-api</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.approval</groupId>
 			<artifactId>approval-repo-api</artifactId>
 			<version>0.1.0</version>
 		</dependency>
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 	<!--
 		The scm is required for the buildnumber-maven-plugin which is required
