--- a/lecm-approval/api/pom.xml
+++ b/lecm-approval/api/pom.xml
@@ -17,5 +17,9 @@
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+		</dependency>
 	</dependencies>
 </project>
