--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts.properties
@@ -29,3 +29,5 @@ contract.contractTime.link=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u04
 contract.contractTime.attachment=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u043D\u044B\u0439 \u043E\u0431\u0440\u0430\u0437 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 contract.contractTime.fromTime=\u041D\u0430\u0447\u0430\u043B\u043E \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+
+contract.contractTermination.baseOnDocument=Reason
