Добавил регламент согласования в сборку.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2187 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
 		<module>lecm-regnumbers</module>
 		<module>lecm-contractors</module>
 		<module>lecm-contracts-fake</module>
+		<module>lecm-approval</module>
 	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
