[~]В  модель документ к договору добалена ассоциация на основной документ (договор)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2201 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model.properties
@@ -14,3 +14,5 @@ lecm-additional-document_model.association.lecm-additional-document_additionalDo
 lecm-additional-document_model.association.lecm-additional-document_additionalDocumentType.description=Additional document type
 lecm-additional-document_model.association.lecm-additional-document_reasonDelete-assoc.title=Reason delete
 lecm-additional-document_model.association.lecm-additional-document_reasonDelete-assoc.description=Reason delete
+lecm-additional-document_model.association.lecm-additional-document_document-assoc.title=The agreement number
+lecm-additional-document_model.association.lecm-additional-document_document-assoc.description=The agreement number
