причина удаления договора отрисовывается только после удаления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2215 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -46,3 +46,5 @@ lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=The reaso
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=The reason for deletion
 lecm-contract_model.association.lecm-contract_representative-assoc.title=Representative
 lecm-contract_model.association.lecm-contract_representative-assoc.description=Representative
+lecm-contract-aspect_model.association.lecm-contract-aspect_reasonDelete-assoc.title=Delete reason
+lecm-contract-aspect_model.association.lecm-contract-aspect_reasonDelete-assoc.description=Delete reason
