ALF-796: Регистрация проекта договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2232 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -109,6 +109,11 @@
 		    <version>${project.version}</version>
 		    <scope>provided</scope>
 	    </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.notifications</groupId>
+		    <artifactId>notifications-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
