[+]Дашлет сводная информация добавлено выпадающее окошко с информацией по участникам договорной деятельности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2238 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/dashlets/summary/contracts.summary.get.properties
@@ -4,3 +4,4 @@ label.info.contractsToDevelop=Contracts to develop:
 label.info.activeContracts=Active contracts:
 label.info.inactiveContracts=Inactive contracts:
 label.info.participants=Participants of the contract activity:
+label.info.panel.title=Participants of the contract activity
