--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share.properties
@@ -17,3 +17,5 @@ label.limit_reached=Limit reached: records were found more than returned. Please
 message.delete.success=Item was deleted
 
 logicecm.base.message.enter-search-text=Enter search text
+
+contract.daterange= Date range
