--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model.properties
@@ -4,44 +4,44 @@ lecm-contract_model.property.cm_name.title=Name
 lecm-contract_model.property.cm_name.description=Name
 lecm-contract_model.property.lecm-contract_regNumProject.title=Registration number of the draft contract
 lecm-contract_model.property.lecm-contract_regNumProject.description=Registration number of the draft contract
-lecm-contract_model.property.lecm-contract_regNumSystem.title=Registration number of the contract system
+lecm-contract_model.property.lecm-contract_regNumSystem.title=Registration number
 lecm-contract_model.property.lecm-contract_regNumSystem.description=Registration number of the contract system
 lecm-contract_model.property.lecm-contract_regNumContractor.title=Registration number of the Counterparty
 lecm-contract_model.property.lecm-contract_regNumContractor.description=Registration number of the Counterparty
-lecm-contract_model.property.lecm-contract_dateRegProjectContracts.title=Date of registration of the project agreement
-lecm-contract_model.property.lecm-contract_dateRegProjectContracts.description=Date of registration of the project agreement
-lecm-contract_model.property.lecm-contract_dateRegContracts.title=Date of registration of the contract
-lecm-contract_model.property.lecm-contract_dateRegContracts.description=Date of registration of the contract
+lecm-contract_model.property.lecm-contract_dateRegProjectContracts.title=Project registration date
+lecm-contract_model.property.lecm-contract_dateRegProjectContracts.description=Contract project registration date
+lecm-contract_model.property.lecm-contract_dateRegContracts.title=Registration date
+lecm-contract_model.property.lecm-contract_dateRegContracts.description=Contract registration date
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=Date of contract
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=Date of contract
-lecm-contract_model.property.lecm-contract_summaryContent.title=Summary of the treaty
-lecm-contract_model.property.lecm-contract_summaryContent.description=Summary of the treaty
-lecm-contract_model.property.lecm-contract_signedCounterparty.title=Signed counterparty
-lecm-contract_model.property.lecm-contract_signedCounterparty.description=Signed counterparty
-lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=Signatory of the counterparty
-lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=Signatory of the counterparty
+lecm-contract_model.property.lecm-contract_summaryContent.title=Contract summary
+lecm-contract_model.property.lecm-contract_summaryContent.description=Contract summary
+lecm-contract_model.property.lecm-contract_signedCounterparty.title=Signed by counterparty
+lecm-contract_model.property.lecm-contract_signedCounterparty.description=Signed by counterparty
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=Counterparty signer
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=Counterparty signer
 lecm-contract_model.property.lecm-contract_totalSum.title=Total sum
-lecm-contract_model.property.lecm-contract_totalSum.description=The total amount of the contract
+lecm-contract_model.property.lecm-contract_totalSum.description=The total sum of the contract
 lecm-contract_model.property.lecm-contract_startDate.title=Start date
 lecm-contract_model.property.lecm-contract_startDate.description=Start date of the contract
 lecm-contract_model.property.lecm-contract_endDate.title=End date
 lecm-contract_model.property.lecm-contract_endDate.description=End date of the contract
 lecm-contract_model.property.lecm-contract_unlimited.title=Unlimited
 lecm-contract_model.property.lecm-contract_unlimited.description=Unlimited
-lecm-contract_model.property.lecm-contract_locationRegistration.title=Location of registration
-lecm-contract_model.property.lecm-contract_locationRegistration.description=Location of registration
-lecm-contract_model.property.lecm-contract_locationContract.title=Location of contract
-lecm-contract_model.property.lecm-contract_locationContract.description=Location of contract
+lecm-contract_model.property.lecm-contract_locationRegistration.title=Registration location
+lecm-contract_model.property.lecm-contract_locationRegistration.description=Registration location
+lecm-contract_model.property.lecm-contract_locationContract.title=Location
+lecm-contract_model.property.lecm-contract_locationContract.description=Contract location
 lecm-contract_model.association.lecm-contract_partner-assoc.title=Contractor
 lecm-contract_model.association.lecm-contract_partner-assoc.description=Contractor
 lecm-contract_model.association.lecm-contract_registrator-assoc.title=Registrator
 lecm-contract_model.association.lecm-contract_registrator-assoc.description=Registrator of document
 lecm-contract_model.association.lecm-contract_currency-assoc.title=Currency of contract
 lecm-contract_model.association.lecm-contract_currency-assoc.description=Currency of contract
-lecm-contract_model.association.lecm-contract_typeContract-assoc.title=Type contract
-lecm-contract_model.association.lecm-contract_typeContract-assoc.description=Type contract
-lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=Subject of the contract
-lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=Subject of the contract
+lecm-contract_model.association.lecm-contract_typeContract-assoc.title=Contract type
+lecm-contract_model.association.lecm-contract_typeContract-assoc.description=Contract type
+lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=Subject
+lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=Contract subject
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=The reason for deletion
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=The reason for deletion
 lecm-contract_model.association.lecm-contract_representative-assoc.title=Representative
