Изменено имя lecm-contractors-api с "Logic ECM Calendar Repo API" на "Logic ECM Contractors Repo API"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2262 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contractors/api/pom.xml
+++ b/lecm-contractors/api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>lecm-contractors-api</artifactId>
-	<name>Logic ECM Calendar Repo API</name>
+	<name>Logic ECM Contractors Repo API</name>
 
 	<dependencies>
 		<dependency>
