ВНИМАНИЕ! Изменены модели данных, так что все может сломаться! Причесаны модели данных для параллельного и последовательного согласования: избавился от лишних файлов, свел все в два неймспейса вместо четырех, добавил properties-файлы для последовального согласования.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2284 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
@@ -1,5 +1,4 @@
-lecmPaWf_parallelApprovalWorkflow.lecmPaWf_parallelApproval.title=Parallel approvement
-lecmPaWf_parallelApprovalWorkflow.lecmPaWf_parallelApproval.description=Parallel approvement
-lecmPaWf_parallelApprovalWorkflow.association.lecmPaWf_employeesAssoc.title=\u0421laim
-lecmPaWf_parallelApprovalWorkflow.association.lecmPaWf_employeesAssoc.description=\u0421laim
-
+lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.title=Parallel approvement
+lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.description=Parallel approvement
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421laim
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421laim
