--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
@@ -1,5 +1,8 @@
-label.title=Attachments
-dashlet.help=<p>Dashlet "Attachments" is designed to...</p>
+label.title=My tasks
+dashlet.help=<p>Dashlet "My tasks" is designed to...</p>
 dashlet.help.tooltip=Show help
 dashlet.expand.tooltip=Expand
 dashlet.tasks.count=Total count
+
+empty.title=Review the tasks assigned to you
+empty.description=Different types of tasks can appear in this task list and you need to address each one. This could involve reviewing a document or simply accepting an invitation to a site.
