ALF-749 10.2.4 АРМ. Дашлет. Задачи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2301 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/dashlet/my-tasks.get.properties
@@ -5,4 +5,4 @@ dashlet.expand.tooltip=Expand
 dashlet.tasks.count=Total count
 
 empty.title=Review the tasks assigned to you
-empty.description=Different types of tasks can appear in this task list and you need to address each one. This could involve reviewing a document or simply accepting an invitation to a site.
+empty.description=Different types of tasks can appear in this task list and you need to address each one.
