--- a/lecm-base/repo/pom.xml
+++ b/lecm-base/repo/pom.xml
@@ -57,6 +57,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>org.alfresco</groupId>
+		    <artifactId>alfresco-remote-api</artifactId>
+	    </dependency>
         <dependency>
             <groupId>ru.it.lecm.base</groupId>
             <artifactId>base-repo-api</artifactId>
@@ -72,6 +76,11 @@
             <artifactId>lecm-security-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.orgstructure</groupId>
+		    <artifactId>orgstructure-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
