--- a/lecm-approval/repo/pom.xml
+++ b/lecm-approval/repo/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>approval-repo-api</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.notifications</groupId>
+			<artifactId>notifications-repo-api</artifactId>
+			<version>0.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<!--
 		The scm is required for the buildnumber-maven-plugin which is required
