--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,8 @@
         <spring.version>3.0.5.RELEASE</spring.version>
         <activiti.version>5.7</activiti.version>
         <spring.surf.version>1.0.0</spring.surf.version>
-        <jasperreports.version>4.7.0</jasperreports.version>
+		<!-- <jasperreports.version>4.7.0</jasperreports.version> -->
+		<jasperreports.version>5.0.4</jasperreports.version>
 		<slf4j.version>1.5.11</slf4j.version>
 		<spring.security.version>3.1.0.RC2</spring.security.version>
 		<acegisecurity.version>0.8.2</acegisecurity.version>
