--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,11 +26,11 @@
     <repositories>
         <repository>
             <id>alfresco-public</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
         </repository>
         <repository>
             <id>alfresco-public-snapshots</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -40,11 +40,11 @@
     <pluginRepositories>
         <pluginRepository>
             <id>alfresco-public</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
         </pluginRepository>
         <pluginRepository>
             <id>alfresco-public-snapshots</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public-snapshots</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
