Правильный путь до Альфресковых репозиториев https://artifacts.alfresco.com
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2326 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
     <repositories>
         <repository>
             <id>alfresco-public</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
         </repository>
         <repository>
             <id>alfresco-activiti</id>
-            <url>https://maven.alfresco.com/nexus/content/repositories/activiti-releases/</url>
+            <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
         </repository>
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
@@ -52,7 +52,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>alfresco-public</id>
-            <url>http://maven.alfresco.com/nexus/content/groups/public</url>
+            <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
         </pluginRepository>
     </pluginRepositories>
     <properties>
