ALF-781 Описание бизнес-роли
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2335 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -16,3 +16,5 @@ message.can-transfer-rights.error=You can transfer rights to only one
 message.has-trustee.error=You must specify a trustee
 
 form.button.submit.label=Save
+
+lecm-d8n_procuracy-business-role-assoc-description=Description
