кастомизация формы принятия решения о согласовании
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2336 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model.properties
@@ -2,3 +2,7 @@ lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.title=Parallel approve
 lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.description=Parallel approvement
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421laim
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421laim
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED=Approve
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve with remark
+listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=Reject
+lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=Document with comments
