--- a/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model.properties
@@ -1,4 +1,8 @@
-lecmSeq_parallelApprovalWorkflow.lecmSeq_parallelApproval.title=Sequential approvement
-lecmSeq_parallelApprovalWorkflow.lecmSeq_parallelApproval.description=Sequential approvement
-lecmSeq_parallelApprovalWorkflow.association.lecmSeq_employeesAssoc.title=\u0421laim
-lecmSeq_parallelApprovalWorkflow.association.lecmSeq_employeesAssoc.description=\u0421laim
+lecmSeq_sequentialApprovalWorkflow.lecmSeq_sequentialApproval.title=Sequential approvement
+lecmSeq_sequentialApprovalWorkflow.lecmSeq_sequentialApproval.description=Sequential approvement
+lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.title=\u0421laim
+lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.description=\u0421laim
+listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED=Approve
+listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED_WITH_REMARK=Approve with remark
+listconstraint.lecmSeq_approveTaskResultConstraint.REJECTED=Reject
+lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_approveTaskCommentAssoc.title=Document with comments
