[~] ALF-709. Добавлены процессы "Принудительное согласование" и "Прерывание согласования"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2341 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/pom.xml
+++ b/lecm-approval/repo/pom.xml
@@ -67,6 +67,12 @@
 			<version>0.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.statemachine</groupId>
+            <artifactId>statemachine-api</artifactId>
+            <version>0.1.0</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 	<!--
 		The scm is required for the buildnumber-maven-plugin which is required
