[~] ALF-709. Добавлены процессы "Принудительное согласование" и "Прерывание согласования"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2349 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
+++ b/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form.properties
@@ -4,3 +4,8 @@ lecm-al_approval-item-employee-unit=Unit
 button.print=Print
 ru.it.approval.terminate=\u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u043F\u0440\u0435\u0440\u0432\u0430\u0442\u044C \u043F\u0440\u043E\u0446\u0435\u0441\u0441 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F?
 ru.it.approval.force=\u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u043F\u0440\u0438\u043D\u0443\u0434\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442?
+
+
+SELECT * FROM act_ru_task WHERE proc_def_id_ IN (SELECT id_ FROM act_re_procdef WHERE key_ = 'lecmParallelApproval' AND version_ < (SELECT MAX(version_) FROM act_re_procdef WHERE key_ = 'lecmParallelApproval') );
+SELECT * FROM act_re_procdef WHERE key_ = 'lecmParallelApproval' AND version_ < (SELECT MAX(version_) FROM act_re_procdef WHERE key_ = 'lecmParallelApproval'); 
+
