Добавлены методы IWorkCalendar#getEmployeeNextWorkingDay и IWorkCalendar#getEmployeePreviousWorkingDay и веб-скрипты для доступа к ним.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2353 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar.properties
@@ -11,7 +11,7 @@ lecm-cal_calendar-model.property.lecm-cal_reason.title=Reason
 #<type name="lecm-cal:working-days">
 lecm-cal_calendar-model.type.lecm-cal_working-days.tilte=Working days
 #<type name="lecm-cal:non-working-days">
-lecm-cal_calendar-model.type.lecm-cal_non-working-days.tilte=Non-working days
+lecm-cal_calendar-model.type.lecm-cal_non-working-days.title=Non-working days
 
 #<model name="lecm-absence:absence-model"
 lecm-absence_absence-model.title=Employee Absence
