--- a/lecm-approval/repo/pom.xml
+++ b/lecm-approval/repo/pom.xml
@@ -20,6 +20,12 @@
 		and include them in the AMP, they are provided by Alfresco
 	-->
 	<dependencies>
+		<!-- we can use any version of jasperfonts cause it has only resources data -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-core</artifactId>
@@ -149,6 +155,11 @@
 				<excludes>
 					<exclude>**README-*</exclude>
 				</excludes>
+			</resource>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/config/reportdefinitions</directory>
+				<targetPath>reportdefinitions</targetPath>
 			</resource>
 		</resources>
 	</build>
