1) изгнал лишние зависимости в provided, перенес jasperreports-fonts в jasperforms-repo 2) избавился от повторений в списке получателей уведомлений 3) исправил рассылку лишних уведомлений о том что согласование просрочили
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2382 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/api/pom.xml
+++ b/lecm-approval/api/pom.xml
@@ -21,5 +21,9 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-engine</artifactId>
+		</dependency>
 	</dependencies>
 </project>
