[~] Машина состояний. Изменена работа с архивными папками
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2388 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -24,6 +24,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
 lecm-stmeditor_model.property.lecm-stmeditor_forDraft.title=For Draft
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolder.title=Archive Folder
+lecm-stmeditor_model.property.lecm-stmeditor_archiveFolderAdditional.title=Archive Folder Additional
 lecm-stmeditor_model.property.lecm-stmeditor_rolesFolder.title=Business Roles of Process
 lecm-stmeditor_model.property.lecm-stmeditor_creationDocument.title=Creator
 lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=Static Roles
